--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "ext-dom": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^12"
+        "phpunit/phpunit": "^11.0",
+        "laravel/pint": "^1.24"
     }
 }
