--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0",
-        "laravel/pint": "^1.24"
+        "laravel/pint": "^1.24",
+        "phpstan/phpstan": "^2.1"
     }
 }
