--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,11 @@
             "KrZar\\LaravelDom\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "KrZar\\LaravelDom\\Tests\\": "tests/"
+        }
+    },
     "authors": [
         {
             "name": "Krystian Zaręba"
@@ -24,7 +29,8 @@
     "require": {
         "php": "^8.2",
         "illuminate/collections": "^12.21",
-        "ext-dom": "*"
+        "ext-dom": "*",
+        "ext-libxml": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.0",
